adding datasource input to generate table

--- a/templates/table.haml
+++ b/templates/table.haml
@@ -1,5 +1,7 @@
 - row = require "./row"
 
+%input(value=@dataSource)
+
 %table
   - each @data, ->
     -# TODO Update hamlet runtime to remove need for .row-wrap element
