--- a/templates/table.haml
+++ b/templates/table.haml
@@ -1,22 +1,18 @@
 .container
   .form-group
     %h4 Data Source
-    %input.form-control(value=@sourceUrl)
+    .input-group
+      %input.form-control(value=@sourceUrl)
+      %span.input-group-btn
+        %button.btn.btn-default(type="button" click=@loadData) Load
 
-  %button.btn.btn-default(type="button" data-toggle="collapse" data-target="#raw-output") View Raw Source
-  #raw-output.collapse
-    %pre(style="max-height:300px;")= @prettyPrintData
+  %pre(style="height:300px;")= @prettyPrintData
 
   .form-group
     %h4 Mapping Transformation
     %textarea.form-control(value=@mapTransform)
 
-  .form-group
-    %button.btn.btn-default(type="button" click=@applyMapping) Apply Mapping
-
-  %pre= @mapping
-
-  %table
+  %table.table
     %thead
       %tr
         - each @headers, (header) ->
@@ -32,9 +28,19 @@
     %h4 Reduce Transformation
 
   .form-group
-    %h4 Sum
-    %textarea.form-control(value=@reduceTransform)
+    %h5 Premade
+    %select.form-control(value=@aggregator options=@aggregatorOptions)
+
+  %h4 OR
+
+  .form-group
+    %h5 Custom
+    %textarea.form-control(value=@aggregateTransform)
+
+  .form-group
+    %h4 Apply Across
+    %textarea.form-control(value=@groupBy)
 
   %h4 Output
   .pre
-    .reduction-output= @reduction
+    .reduction-output= @aggregate
