add sort transform

--- a/templates/table.haml
+++ b/templates/table.haml
@@ -12,6 +12,10 @@
     %h4 Mapping Transformation
     %textarea.form-control(value=@mapTransform)
 
+  .form-group
+    %h4 Sorting Transformation
+    %textarea.form-control(value=@sortTransform)
+
   %table.table
     %thead
       %tr
