--- a/templates/table.haml
+++ b/templates/table.haml
@@ -1,6 +1,6 @@
 %section.main
   .form-group
-    %h3 Data Source
+    %h3 Dataset
     %span Data comes from a
     %select.form-control.select-inline
       %option URL
