--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -10,6 +10,10 @@ html, body, .main, .sidebar
 body
   padding: 1em
 
+ul
+  margin-bottom: 0
+  padding-left: 1.5em
+
 .hidden
   display: none !important
 
