--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -46,7 +46,11 @@ ul
   padding: 1em
 
   &:hover
+    background-color: #eee
+
+  &.active
     background-color: #dedede
+    border: 1px solid #999
 
 .step-details
   padding-left: 36px
