--- a/templates/table.haml
+++ b/templates/table.haml
@@ -6,42 +6,13 @@
       - transducer = @activeStep().transducer()
       %h2.title= transducer.title
       .form-group
-      - if transducer.type() is "dataset"
-        %span Data comes from a
-        %select.form-control.select-inline(@options)
-        .inline-form-container
-          %input.form-control(value=@sourceUrl)
-          %button.btn.btn-default(type="button" click=@loadData) Load
-
-        %table.table.hidden
-          %thead
-            %tr
-              - @headers().forEach (header) ->
-                %th= header.replace(/[@]/g, "").trim()
-
-          %tbody
-            - @body().forEach (cells) ->
-              %tr
-                - cells.forEach (value) ->
-                  %td= value
-      - if transducer.type() is "edit"
-        .spreadsheet
-      - if transducer.type() is "mapping"
-        .form-group
-          %h4 Perform operations on a single row and return the same sized dataset. "@" refers to the current row you're working with.
+        - if transducer.type() is "dataset"
+          %span Data comes from a
+          %select.form-control.select-inline(@options)
+          .inline-form-container
+            %input.form-control(value=@sourceUrl)
+            %button.btn.btn-default(type="button" click=@loadData) Load
+        - else if transducer.type() is "edit"
+          .spreadsheet
+        - else
           = transform transducer
-
-      - if transducer.type() is "sorting"
-        .form-group
-          %h4 Reorder dataset based on relation of values in a row to each other.
-          %textarea.form-control(value=@sortTransform)
-      - if transducer.type() is "expansion"
-        .form-group
-          %h4 Expand
-          %textarea.form-control
-      - if transducer.type() is "filter"
-        .form-group
-          %h4 Perform operations on a single row and return the same sized dataset. "@" refers to the current row you're working with.
-          = transform transducer
-
-  .output
