--- a/templates/sidebar.haml
+++ b/templates/sidebar.haml
@@ -9,10 +9,11 @@
         .icon.inline-left.glyphicon(class=@icon)
         .step-details
           .step-type= @type
-          .step-description= @description
+          %textarea.form-control.step-description= @description
     .sidebar-footer
       %h4.centered Add transform
       .btn-group
+        - disabled = "disabled" unless editor.data().length
         - @actions.each ->
-          .btn.btn-default(type="button" @click @title)
+          .btn.btn-default(type="button" @click @title disabled=disabled)
             %span.glyphicon(@class)
