--- a/templates/step.haml
+++ b/templates/step.haml
@@ -4,4 +4,4 @@
   .icon.inline-left.glyphicon(class=@step.icon)
   .step-details
     .step-type= @step.type
-    %textarea.form-control.step-description= @step.description
+    %textarea.form-control.step-description(value=@step.description)
