--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -86,3 +86,11 @@ ul
     margin: 0 0.5em
     width: 210px
     vertical-align: middle
+
+.publish-container
+  position: fixed
+  right: 1em
+
+  .btn
+    margin-left: 0.5em
+
