--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -115,7 +115,7 @@ ul {
 
 .inline-form-container .form-control {
   display: inline-block;
-  margin: 0 0.5em;
+  margin-right: 0.5em;
   width: 210px;
   vertical-align: middle;
 }
