--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -83,7 +83,7 @@ ul
 
   .form-control
     display: inline-block
-    margin: 0 0.5em
+    margin-right: 0.5em
     width: 210px
     vertical-align: middle
 
