--- a/templates/step.haml
+++ b/templates/step.haml
@@ -1,5 +1,5 @@
-- activeClass = -> "active" if @stepIndex is @editor.activeStepIndex()
-- click = -> @editor.activeStepIndex @stepIndex
+- activeClass = -> "active" if @stepIndex is @dataset.activeStepIndex()
+- click = -> @dataset.activeStepIndex @stepIndex
 .timeline-step(click=click class=activeClass)
   .icon.inline-left.glyphicon(class=@step.icon)
   .step-details
