--- a/templates/datasource.haml
+++ b/templates/datasource.haml
@@ -9,6 +9,7 @@
   .form-group.load-from-file
     %h4 From file
     .form-container
+      = @fileInput
   .form-group
     %h4 By hand
     .form-container
