add tab navigation for sheets

--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -28,6 +28,7 @@ ul
 .main
   padding-left: 365px /* to simulate padding-left: 1em */
   padding-top: 1em
+  padding-right: 1em
 
 .centered
   text-align: center
@@ -94,3 +95,17 @@ ul
   .btn
     margin-left: 0.5em
 
+.sheet-navigation
+  background-color: white
+  bottom: 0
+  left: 0
+  padding-bottom: 0.5em
+  padding-left: 365px
+  padding-top: 0.5em
+  position: fixed
+  width: 100%
+
+.invisible-background
+  background-color: transparent
+  border: none
+  cursor: pointer
