Populate from local storage on page load. Add save to local storage button

--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -109,3 +109,8 @@ ul
   background-color: transparent
   border: none
   cursor: pointer
+
+.save-sheets
+  position: absolute
+  top: 1em
+  right: 1em
