--- a/templates/editor.haml
+++ b/templates/editor.haml
@@ -3,6 +3,8 @@
   Datasource = require "./datasource"
 
 %section.main
+  %button.btn.btn-default.save-sheets(type="button" click=editor.saveData) Save
+
   .form-group
     %h4 Data before current transform
     .input-spreadsheet-data
