--- a/templates/editor.haml
+++ b/templates/editor.haml
@@ -19,7 +19,7 @@
     - else
       = Datasource dataset
 
-  .form-group
+  .form-group.pad-for-footer
     %h4 Data after current transform
     .output-spreadsheet-data
 
