--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -30,6 +30,9 @@ ul
   padding-top: 1em
   padding-right: 1em
 
+.pad-for-footer
+  padding-bottom: 60px
+
 .centered
   text-align: center
 
@@ -99,11 +102,18 @@ ul
   background-color: white
   bottom: 0
   left: 0
+  overflow-x: scroll
   padding-bottom: 0.5em
   padding-left: 365px
   padding-top: 0.5em
   position: fixed
+  white-space: nowrap
   width: 100%
+
+  .nav-pills
+    li
+      display: inline-block
+      float: initial
 
 .invisible-background
   background-color: transparent
